Created character and gamemode classes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/MyContent/Levels/Lvl_Sandbox.Lvl_Sandbox
+EditorStartupMap=/Game/MyContent/Levels/Lvl_Sandbox.Lvl_Sandbox
 GlobalDefaultGameMode="/Script/Rampant.RampantGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -29,8 +29,8 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Rampant")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Rampant")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="RampantGameMode")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="RampantCharacter")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="StandardGameMode")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="StandardCharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
